# ros2web

./: README.md  package.xml  setup.cfg  setup.py
examples/: README.md
examples/ros2web_example_cpp/: CMakeLists.txt  README.md  package.xml
examples/ros2web_example_cpp/src/: main.cpp
examples/ros2web_example_py/: package.xml  setup.cfg  setup.py
examples/ros2web_example_py/ros2web_example_py/: api.py  form.py
examples/ros2web_example_py/ros2web_example_py/data/: index.html
ros2web/: debug.py  package.xml  setup.py
ros2web/api/: connector.py  handler.py  ros_executor.py  ws_client.py
ros2web/command/: web.py
ros2web/ros2web/api/: handler.py  ros_executor.py  ws_client.py
ros2web/ros2web/command/: web.py
ros2web/ros2web/handler/: __init__.py
ros2web/ros2web/utilities/: __init__.py  socket.py
ros2web/ros2web/verb/: __init__.py  server.py
ros2web/utilities/: msg.py
ros2web/verb/: __init__.py  server.py
ros2web_interfaces/: CMakeLists.txt  package.xml
ros2web_interfaces/msg/: BodyPart.msg  ContentType.msg  HTTPStatusCode.msg  WSMsg.msg  WSMsgData.msg  WSMsgType.msg
ros2web_interfaces/srv/: HTTP.srv  WS.srv
