<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2web</name>
  <version>0.1.0</version>
  <description>The ros2web is software that forwards HTTP requests to ROS2 packages.</description>
  <maintainer email="tygoto@me.com">tygoto</maintainer>
  <license>Apache License 2.0</license>

  <depend>python3-importlib-resources</depend>
  <depend>ros2cli</depend>
  <depend>ros2web_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
